# rabbitmq-rust-docker

./: .gitignore  README.md  docker-compose.yml
broker/: Cargo.toml  Dockerfile  docker.sh
broker/src/: main.rs
consumer/: Cargo.toml  Dockerfile  docker.sh  output.txt
consumer/src/: main.rs
consumer/src/utils/: server.rs
cron/: Dockerfile  curl-cron
producer/: Cargo.toml  Dockerfile  docker.sh
producer/src/: main.rs
producer/src/utils/: server.rs
