[package]
name = "broker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.158"
tokio = { version = "1.26.0", features = ["full"] }
actix-web = "4.3.1"
lapin = "2.0.0"
tracing-subscriber = "0.3.16"
