[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
tracing-subscriber = "0.3.16"
serde = "1.0.158"
tokio = { version = "1.26.0", features = ["full"] }
security-framework = "2.8"
lapin = "2.0.0"
rand = "0.8.5"
serde_json = "1.0.94"
chrono = "0.4.24"
actix-web = "4.3.0"